--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>Git app</title>
-</head>
+<link href="/main.css" rel="stylesheet"></head>
 
 <body>
     <div id="root">
 
     </div>
-<script type="text/javascript" src="index.bundle.js"></script></body>
+<script type="text/javascript" src="/bundle.js"></script></body>
 
 </html>
