--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git app</title>
 <link href="/main.css" rel="stylesheet"></head>
 
 <body>
     <div id="root">
-
     </div>
 <script type="text/javascript" src="/bundle.js"></script></body>
 
